# django-1-Sorumeit

./: manage.py  pyproject.toml
blog/: urls.py  views.py
nfactorial/: asgi.py  settings.py  urls.py
nfactorial /: views.py
nfactorial/nfactorial/: settings.py  wsgi.py
nfactorial1/: apps.py  urls.py  views.py
nfatorial/: asgi.py  settings.py  urls.py  wsgi.py
