[tool.poetry]
name = "django-1-sorumeit"
version = "0.1.0"
description = ""
authors = ["Sorumeit <129141855+Sorumeit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_1_sorumeit"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
